attempting to fix mobile canvas overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,13 +29,6 @@ a {
   font-weight: 500;
   font-display: swap;
 }
-@font-face {
-  font-family: "Andale Mono";
-  src: url("/fonts/AndaleMono.ttf");
-  font-style: medium;
-  font-weight: 500;
-  font-display: swap;
-}
 body, html{
   font-family: "Andale Mono";
 }
