--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -11,6 +11,8 @@
     // @include fullviewPort();
     height: 100vh;
     width: 100vw;
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
     position:fixed;
     padding:0;
     margin:0;
@@ -21,15 +23,15 @@
     // position: fixed;
     // top: 0;
     // left: 0;
-    @media screen and (max-width:$xs){
-        height: 100vh !important;
-        width: 100vw !important;
-        position:fixed !important;
-        padding: 0 !important;
-        margin: 0 !important;
-        top: -5% !important;
-        left: 0 !important;
-    }
+    // @media screen and (max-width:$xs){
+    //     height: 100vh !important;
+    //     width: 100vw !important;
+    //     position:fixed !important;
+    //     padding: 0 !important;
+    //     margin: 0 !important;
+    //     top: -5% !important;
+    //     left: 0 !important;
+    // }
 }
 .titles{
     display: flex;
